--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,6 +91,12 @@ h3 { font-size: var(--fs-h3); }
     margin-bottom: 1em;
 }
 
+.section__subtitle--work {
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
+}
+
 /* header */
 nav { display: none; }
 
@@ -107,7 +113,7 @@ nav { display: none; }
     display: inline-block;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 700px) {
     .intro {
         display: grid;
         width: min-content;
@@ -134,6 +140,26 @@ nav { display: none; }
         position: relative;
         left: -1.5em;
         width: calc(100% + 1.5em);
+    }
+}
+
+@media (min-width: 800px) {
+    .section__title--intro {
+        font-size: 3rem;
+    }
+
+    .section__subtitle--intro {
+        font-size: 1rem;
+    }
+}
+
+@media (min-width: 900px) {
+    .section__title--intro {
+        font-size: 4.5rem;
+    }
+
+    .section__subtitle--intro {
+        font-size: 1.125rem;
     }
 }
 
@@ -182,4 +208,70 @@ nav { display: none; }
     .highlight + .highlight {
         margin-left: 2em;
     }
+}
+
+/* about */
+.about {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+@media (min-width: 600px) {
+    .about {
+        display: grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas: 
+            "title img"
+            "subtitle img";
+    }
+
+    .section__title--about {
+        grid-area: title;
+    }
+
+    .section__subtitle--about {
+        grid-area: subtitle;
+    }
+
+    .about__img {
+        grid-area: img;
+    }
+}
+
+/* work */
+.work {
+    background-color: var(--clr-dark);
+    color: var(--clr-light);
+    text-align: center;
+}
+
+.jobs {
+    display: grid;
+    margin: 0 8em;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    justify-content: center;
+}
+
+.jobs__job {
+    background: var(--clr-accent);
+    overflow: hidden;
+}
+
+.jobs__img {
+    transition: 
+        transform 750ms cubic-bezier(0.5, 0, 0.5, 1),
+        opacity 250ms linear;
+    width: 100%;
+    border: 5px solid var(--clr-dark);
+}
+
+.jobs__job:focus {
+    position: relative;
+    z-index: 2;
+}
+
+.jobs__img:hover,
+.jobs__job:focus .jobs__img {
+    transform: scale(1.1);
+    opacity: 85%;
 }
