--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,277 +1,3 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-/* custom properties */
-:root {
-    --ff-primary: "Source Sans Pro", sans-serif;
-    --ff-secondary: "Source Code Pro", monospace;
-
-    --fw-reg: 300;
-    --fw-bold: 900;
-
-    --clr-light: #fff;
-    --clr-dark: #303030;
-    --clr-accent: #16e0bd;
-
-    --fs-h1: 3rem;
-    --fs-h2: 2.25rem;
-    --fs-h3: 1.25rem;
-    --fs-body: 1rem;
-
-    --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25),
-          0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
-}
-
-@media (min-width: 800px) {
-    :root {
-        --fs-h1: 4.5rem;
-        --fs-h2: 3.75rem;
-        --fs-h3: 1.5rem;
-        --fs-body: 1.125rem;
-    }
-}
-
-/* general styles */
-body {
-    background: var(--clr-light);
-    color: var(--clr-dark);
-    margin: 0;
-    font-family: var(--ff-primary);
-    font-size: var(--fs-body);
-    line-height: 1.6;
-}
-
-section {
-    padding: 5em 2em;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-}
-
-strong { font-weight: var(--fw-bold); }
-
-/* typography */
-h1,
-h2,
-h3 {
-    line-height: 1;
-    margin: 0;
-}
-
-h1 { font-size: var(--fs-h1); }
-h2 { font-size: var(--fs-h2); }
-h3 { font-size: var(--fs-h3); }
-
-.section__title {
-    margin-bottom: 0.25em;
-}
-
-.section__title--intro {
-    font-weight: var(--fw-reg);
-}
-
-.section__title--intro strong{
-    display: block;
-}
-
-.section__subtitle {
-    margin: 0;
-    font-size: var(--fs-h3);
-}
-
-.section__subtitle--intro {
-    background: var(--clr-accent);
-    padding: 0.25em 1em;
-    font-family: var(--ff-secondary);
-    margin-bottom: 1em;
-}
-
-.section__subtitle--work {
-    color: var(--clr-accent);
-    font-weight: var(--fw-bold);
-    margin-bottom: 2em;
-}
-
-/* header */
-nav { display: none; }
-
-/* intro */
-.intro {
-    position: relative;
-}
-
-.intro__img {
-    box-shadow: var(--bs);
-}
-
-.section__subtitle--intro {
-    display: inline-block;
-}
-
-@media (min-width: 700px) {
-    .intro {
-        display: grid;
-        width: min-content;
-        margin: 0 auto;
-        grid-column-gap: 1em;
-        grid-template-areas:
-            "img title"
-            "img subtitle";
-        grid-template-columns: min-content max-content;
-    }
-
-    .intro__img {
-        grid-area: img;
-        min-width: 250px;
-        position: relative;
-        z-index: 2;
-    }
-
-    .section__subtitle--intro {
-        align-self: start;
-        grid-column: -1 / 1;
-        grid-row: 2;
-        text-align: right;
-        position: relative;
-        left: -1.5em;
-        width: calc(100% + 1.5em);
-    }
-}
-
-@media (min-width: 800px) {
-    .section__title--intro {
-        font-size: 3rem;
-    }
-
-    .section__subtitle--intro {
-        font-size: 1rem;
-    }
-}
-
-@media (min-width: 900px) {
-    .section__title--intro {
-        font-size: 4.5rem;
-    }
-
-    .section__subtitle--intro {
-        font-size: 1.125rem;
-    }
-}
-
-/* academics */
-.academics {
-    background-color: var(--clr-dark);
-    background-image: url(../imgs/stevens.jpg);
-    background-size: cover;
-    background-blend-mode: multiply;
-    color: var(--clr-light);
-    text-align: center;
-}
-
-.section__title--academics {
-    color: var(--clr-accent);
-    position: relative;
-}
-
-.section__title--academics::after {
-    content: "";
-    display: block;
-    width: 2em;
-    height: 1px;
-    margin: 0.5em auto 1em;
-    background: var(--clr-light);
-    opacity: 0.25;
-}
-
-.academics-list {
-    list-style: none;
-    padding-left: 0;
-}
-
-.highlight {
-    max-width: 500px;
-    margin: 0 auto;
-}
-
-@media (min-width: 800px) {
-    .highlights {
-        display: flex;
-        max-width: 1000px;
-        margin: 0 auto;
-    }
-
-    .highlight + .highlight {
-        margin-left: 2em;
-    }
-}
-
-/* about */
-.about {
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-@media (min-width: 600px) {
-    .about {
-        display: grid;
-        grid-template-columns: 1fr 200px;
-        grid-template-areas: 
-            "title img"
-            "subtitle img";
-    }
-
-    .section__title--about {
-        grid-area: title;
-    }
-
-    .section__subtitle--about {
-        grid-area: subtitle;
-    }
-
-    .about__img {
-        grid-area: img;
-    }
-}
-
-/* work */
-.work {
-    background-color: var(--clr-dark);
-    color: var(--clr-light);
-    text-align: center;
-}
-
-.jobs {
-    display: grid;
-    margin: 0 8em;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    justify-content: center;
-}
-
-.jobs__job {
-    background: var(--clr-accent);
-    overflow: hidden;
-}
-
-.jobs__img {
-    transition: 
-        transform 750ms cubic-bezier(0.5, 0, 0.5, 1),
-        opacity 250ms linear;
-    width: 100%;
-    border: 5px solid var(--clr-dark);
-}
-
-.jobs__job:focus {
-    position: relative;
-    z-index: 2;
-}
-
-.jobs__img:hover,
-.jobs__job:focus .jobs__img {
-    transform: scale(1.1);
-    opacity: 85%;
+body{
+    padding-top: 3em;
 }
