--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,35 @@
-body{
-    padding-top: 3em;
+/* general styling */
+
+/* navbar styling */
+.navbar {
+    padding-top: 3%;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
+.navbar-nav a{
+    font-size: 22px;
+}
+
+.navbar-brand{
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: -1px;
+}
+
+/* landing page styling */
+.landing{
+    padding-top: 1%;
+    padding-left: 6%;
+    padding-right: 6%;
+}
+
+.landing-text{
+    padding-top: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+.landing-img{
+    width: 30em;
 }
