--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,8 @@
 /* general styling */
 
+a {color: inherit;}
+a:hover {color: inherit;}
+
 /* navbar styling */
 .navbar {
     padding-top: 3%;
@@ -22,14 +25,27 @@
     padding-top: 1%;
     padding-left: 6%;
     padding-right: 6%;
+    padding-bottom: 4%;
 }
 
 .landing-text{
     padding-top: 2%;
     padding-left: 3%;
     padding-right: 3%;
+    font-size: 21.5px;
+    letter-spacing: -1px;
+}
+
+.landing-text h1{
+    font-size: 60px;
 }
 
 .landing-img{
     width: 30em;
+}
+
+.landing-socials i {
+    padding-top: 2%;
+    margin-right: 4%;
+    
 }
